Update DiscoveryModule.java
Replaced seedProviderNames.contains("settings") == false with !seedProviderNames.contains("settings"):
Improves code readability by using the ! operator instead of comparing a boolean to false.

Replaced missingProviderNames.isEmpty() == false with !missingProviderNames.isEmpty():
Same reason as above—more idiomatic use of ! rather than == false.

Used List.copyOf(addresses) instead of Collections.unmodifiableList(addresses):
Produces an immutable list directly. This is a minor improvement in that List.copyOf(...) can sometimes be more efficient and is a bit more explicit about immutability.

Added final qualifiers to local variables where applicable (e.g., final List<String> extendedSeedProviderNames):
Encourages immutability and better clarifies which variables remain unchanged.